Adding ANSI color map

--- a/onmetal-all-in-one/test.yml
+++ b/onmetal-all-in-one/test.yml
@@ -26,6 +26,8 @@
                 - $RPC_BRANCH
     wrappers:
       - mask-passwords
+      - ansicolor:
+            colormap: xterm
     builders:
         - run-tests
     publishers:
