--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -26,6 +26,8 @@
                 - $RPC_BRANCH
     wrappers:
       - mask-passwords
+      - ansicolor:
+            colormap: xterm
     builders:
         - deploy-onmetal-all-in-one:
             os: "{os}"
