--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -1,4 +1,45 @@
 - job-template:
+    name: 'OnMetal-AIO-Build-Host'
+    description: >
+        Creates a public OnMetal server and waits for it to become active.
+
+
+        OnMetal Production Capacity Dashboard: https://onmetal.ohthree.com/iad-m0002
+    logrotate:
+        daysToKeep: 30
+    parameters:
+        - choice:
+            name: REGION
+            choices:
+                - IAD
+                - DFW
+                - LON
+        - choice:
+            name: FLAVOR
+            choices:
+                - onmetal-io2
+                - onmetal-io1
+        - string:
+            name: IMAGE
+            description: Default is OnMetal - Ubuntu 14.04 LTS (Trusty Tahr)
+            default: 9dc2bf0a-7771-45cd-a7f9-ce86ce94c548
+        - string:
+            name: SERVER_NAME
+            description: Optional name for created server.
+            default:
+    scm:
+        - git:
+            url: $OSA_OPS_REPO
+            branches:
+                - $OSA_OPS_BRANCH
+    wrappers:
+      - mask-passwords
+      - ansicolor:
+            colormap: xterm
+    builders:
+        - OnMetal-Build-Host
+
+- job-template:
     name: 'OnMetal-AIO-{deploy-action}'
     logrotate:
         daysToKeep: 30
@@ -21,16 +62,17 @@
     builders:
         - OnMetal-{deploy-action}
 
+
 - project:
     name: onmetal-all-in-one-deploy
     deploy-action:
-        - Build-Host
         - Setup-Host
         - Setup-Cobbler
         - Setup-Virsh
         - Deploy-VMs
         - Deploy-OpenStack
     jobs:
+        - 'OnMetal-AIO-Build-Host'
         - 'OnMetal-AIO-{deploy-action}'
 
 
